# rust-examples

closure/: Cargo.toml
closure/examples/: closure_size.rs  fn.rs  fn_mut.rs  fn_once.rs  fn_once1.rs  mul.rs
closure/src/: main.rs
generic-programming/: Cargo.toml  README.md
generic-programming/src/: main.rs
generic-programming/src/examples/: multi_impl.rs
httpie/: Cargo.toml
httpie/src/: main.rs
kvserver/: Cargo.toml  abi.proto  build.rs
kvserver/examples/: client.rs  dummy_server.rs  readme.md
kvserver/src/: errors.rs  lib.rs
kvserver/src/pb/: abi.rs  mod.rs
kvserver/src/server/: mod.rs
kvserver/src/service/: command_service.rs  mod.rs
kvserver/src/storage/: memory.rs  mod.rs
ownership/: Cargo.toml
ownership/examples/: borrow.rs  brw_pattern.rs  entry_api.rs  mut_ref.rs  ownership1.rs  ownership2.rs  push_str.rs  slice.rs  split_struct.rs  temp_variable.rs
ownership/src/: main.rs
queryer/: Cargo.toml
queryer/examples/: coivd.rs  dialect.rs
queryer/src/: convert.rs  dialect.rs  lib.rs
rgrep/: Cargo.toml
rgrep/src/: main.rs  readme.md  test.txt
rgrep/src/check/: findlines.rs  mod.rs
rust-collections/: Cargo.toml  readme.md
rust-collections/examples/: box_slice.rs  char_slice.rs  iterator.rs  itertools.rs  slice.rs  slice_deref.rs  str_slice.rs
rust-ds/: Cargo.toml  readme.md
rust-ds/src/: main.rs
rust-ds/src/ds/: box.rs  cow.rs  ministring.rs  mod.rs  mutex_guard.rs
rust-flow-control/: Cargo.toml
rust-flow-control/example/: enum_test.rs  match_expr.rs  struct_data.rs
rust-flow-control/src/: main.rs
rust-fn/: .gitignore
rust-fn/src/: main.rs
rust-life-cycle/: Cargo.toml  readme.md
rust-life-cycle/src/examples/: compare_str.rs  first_word.rs  str_split.rs  str_tok.md  str_tok.rs
rust-trait/: Cargo.toml  readme.md
rust-trait/src/: main.rs
rust-trait/src/examples/: add_complex.rs  generic_parse.rs  generic_parse_err.rs  parse.rs
rust-unit/: Cargo.toml
rust-unit/src/: lib.rs
std_lib/: Cargo.toml
std_lib/examples/: box.rs  cons_list.rs  cow.rs  move_to_thread.rs  thread.rs
struct-methods/src/: main.rs
thumbor/: Cargo.toml  abi.proto  test_result
thumbor/src/: main.rs  readme.md
thumbor/src/engine/: mod.rs  photon.rs
thumbor/src/pb/: abi.rs  mod.rs
trait-object/src/: main.rs
