[package]
name = "closure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name="closuresize"
path="examples/closure_size.rs"

[[bin]]
name="fnonce"
path="examples/fn_once.rs"

[[bin]]
name="fnonce1"
path="examples/fn_once1.rs"

[[bin]]
name="fnmut"
path="examples/fn_mut.rs"