[package]
name = "kvserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.10.3"
tracing = "0.1"

[dev-dependencies]
anyhow="1"
async-prost="0.3.0"
futures="0.3.21"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] }
tracing-subscriber="0.3.11"

[build-dependencies]
prost-build="0.10.3"