[package]
name = "kvserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
thiserror = "1.0"
async-prost = "0.2.1"
futures = "0.3"
bytes = "1.1.0"
dashmap="5.3.3"
prost = "0.8"
tracing = "0.1"
tracing-subscriber="0.3.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] }

[[bin]]
name="client"
path="examples/client.rs"

[[bin]]
name="server"
path="examples/dummy_server.rs"

[dev-dependencies]
anyhow="1"
thiserror = "1.0"
async-prost = "0.2.1"
futures = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "macros", "net" ] }
tracing-subscriber="0.3.11"

[build-dependencies]
prost-build="0.8"
