[package]
name = "ownership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="own1"
path="examples/ownership1.rs"

[[bin]]
name="pushstr"
path="examples/push_str.rs"


[[bin]]
name="borrow"
path="examples/borrow.rs"

[[bin]]
name="strslice"
path="examples/slice.rs"
