[package]
name = "rust-collections"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools="0.10.3"

[[bin]]
name="slice"
path="examples/slice.rs"

[[bin]]
name="slicederef"
path="examples/slice_deref.rs"

[[bin]]
name="iterator"
path="examples/iterator.rs"

[[bin]]
name="itertools"
path="examples/itertools.rs"

[[bin]]
name="strslice"
path="examples/str_slice.rs"

[[bin]]
name="charslice"
path="examples/char_slice.rs"