[package]
name = "rust-ds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url="2.2.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
lazy_static = "1.4.0"

[[bin]]
name="box"
path="src/ds/box.rs"

[[bin]]
name="cow"
path="src/ds/cow.rs"

[[bin]]
name="mutexguard"
path="src/ds/mutex_guard.rs"

[[bin]]
name="ministring"
path="src/ds/ministring.rs"