[package]
name = "rust-life-cycle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="compare_str"
path="src/examples/compare_str.rs"


[[bin]]
name="first_word"
path="src/examples/first_word.rs"

[[bin]]
name="strtok"
path="src/examples/str_tok.rs"

[[bin]]
name="strsplit"
path="src/examples/str_split.rs"