[package]
name = "rust-trait"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[[bin]]
name="parse"
path="src/examples/parse.rs"

[[bin]]
name="generic_parse"
path="src/examples/generic_parse.rs"