[package]
name = "std_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name="box-example"
path="examples/box.rs"

[[bin]]
name="conslist"
path="examples/cons_list.rs"

[[bin]]
name="cowtest"
path="examples/cow.rs"

[[bin]]
name="threadtest"
path="examples/thread.rs"

[[bin]]
name="movetest"
path="examples/move_to_thread.rs"